[package]
name = "inkstone-infra"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "migrate", "tls-rustls"] }
tantivy = "0.25"
tantivy-jieba = "0.17"
thiserror = "1"

inkstone-core = { path = "../core" }
