[package]
name = "inkstone-infra"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "migrate", "tls-rustls", "uuid"] }
tantivy = "0.25"
tantivy-jieba = "0.17"
thiserror = "1"
uuid = { version = "1", features = ["serde"] }

inkstone-core = { path = "../core" }
